--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,11 +1,18 @@
 #sidebar-main:not(:hover){width: 50px !important;}
 
-#sidebar-main:not(:hover) .tabbrowser-tab{width: 53px !important; min-width: 0px !important} #tabs-newtab-button {display: none !important}
+#sidebar-main:not(:hover) .tabbrowser-tab{width: 53px !important; min-width: 0px !important}
 
 #sidebar-main:not(:hover) .tab-label-container, #sidebar-main:not(:hover) .tab-close-button{ display: none !important}
 
-#sidebar-main:not(:hover) #vertical-tabs-newtab-button{width: 40px !important; min-width: 0px !important; appearance: none !important}
+#sidebar-main:not(:hover) #tabs-newtab-button{width: 40px !important; min-width: 0px !important}
 
 #sidebar-main:hover{margin-right: -201px !important; width: 251px !important;}
 
 #sidebar-main{transition: 0.2s !important; z-index: 4 !important}
+
+
+.actions-list[orientation="vertical"]:not(:hover) moz-button[type="icon ghost"]:not(:last-child) {opacity: 0 !important; height: 0px !important;}
+
+moz-button[type="icon ghost"]{transition: opacity 0.3s ease-in-out !important;}
+
+.actions-list[orientation="vertical"]:not(:hover) moz-button:last-child{background-color: transparent !important;transition: background-color 0ms ease !important;order: -1 !important;}
