--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,52 +1,162 @@
-/* Main sidebar styling */
+/* Options */
+:root {
+	--tweaks-evtoh-collapsed-width: 50px;
+	--tweaks-evtoh-expanded-width: 250px;
+	--tweaks-evtoh-tab-padding: 10px;
+	--tweaks-evtoh-tab-margin: calc((var(--tweaks-evtoh-collapsed-width) - var(--tweaks-evtoh-tab-padding) * 2 - var(--icon-size-default)) / 2);
+	--tweaks-evtoh-animation-duration: 150ms;
+	--tweaks-evtoh-tab-group-label-height: 24px;
+	--tweaks-evtoh-tab-group-label-inline-margin: var(--space-medium);
+	--tweaks-evtoh-tab-group-label-collapsed-font-size: 0;
+	--tweaks-evtoh-tab-group-label-collapsed-font-size-first-letter: 18px;
+	--chrome-content-separator-color: transparent !important;
+}
+
+
+/* Either state (collapsed or expanded) */
 #sidebar-main {
-    width: 50px !important; /* Collapsed width */
-    transition: width 0.075s ease, margin-right 0.075s ease !important; /* Animation speed */
-    z-index: 4 !important; /* Ensure it overlays other elements */
-    margin-right: 0px !important;
-    background: none !important; /* No background in collapsed state */
+	transition: width var(--tweaks-evtoh-animation-duration) ease, margin-inline-end var(--tweaks-evtoh-animation-duration) ease !important;
+
+	& #tabbrowser-tabs,
+	& .tabbrowser-tab {
+		width: 100% !important;
+	}
+
+	& #vertical-pinned-tabs-container,
+	& #tabbrowser-arrowscrollbox {
+
+		& .tab-background,
+		& .tab-content,
+		& #tabs-newtab-button {
+			padding: 0 var(--tweaks-evtoh-tab-padding) !important;
+			width: calc(100% - 2 * var(--tweaks-evtoh-tab-margin)) !important;
+			margin: 0 auto !important;
+		}
+	}
+
+	& #tabbrowser-tabs>#vertical-pinned-tabs-container {
+		padding-inline: 0 !important;
+	}
+
+	/* Always show pinned tabs vertically */
+	& #vertical-pinned-tabs-container {
+		--tab-inline-padding: calc((var(--tab-collapsed-width) - var(--icon-size-default)) / 2) !important;
+
+		&:not(:empty) {
+			display: flex !important;
+			flex-direction: column !important;
+		}
+
+		/* Remove background for pinned tabs */
+		& .tab-background {
+			.tabbrowser-tab:not(:hover)>.tab-stack>&:not([selected], [multiselected]) {
+				background-color: transparent !important;
+			}
+		}
+
+		/* Show the separator between pinned and normal tabs, even when not expanded */
+		&:not(:empty)+#vertical-pinned-tabs-container-separator {
+			display: block !important;
+		}
+	}
+
+	/* Keep attention dot under icon, even when expanded */
+	& .tab-content[titlechanged]:not([selected]) {
+		background-position-x: calc(var(--tweaks-evtoh-tab-padding) + var(--icon-size-default) / 2 - 2px) !important;
+		background-position-y: bottom 2px !important;
+	}
+
+	/* Animate internal tab elements appearing and disappearing */
+	& .tab-label-container,
+	& .tab-close-button,
+	& .toolbarbutton-text {
+		transition: opacity var(--tweaks-evtoh-animation-duration) ease, width var(--tweaks-evtoh-animation-duration) ease !important;
+	}
+
+	/* Container coloured indicators */
+	& .tab-background .tab-context-line {
+		margin-inline-start: calc(-1 * (var(--tweaks-evtoh-tab-margin) + var(--tweaks-evtoh-tab-padding))) !important;
+		margin-block: 4px !important;
+	}
+
+	& tab-group {
+		margin-inline-start: 0 !important;
+
+		&::before {
+			inset-block-start: calc(var(--tweaks-evtoh-tab-group-label-height) + var(--space-small)) !important;
+			inset-inline-start: var(--space-xxsmall) !important;
+		}
+	}
+
+	/* Make tab group labels have consistent height */
+	& .tab-group-label {
+		margin-inline: var(--tweaks-evtoh-tab-group-label-inline-margin) !important;
+		margin-block: 0 !important;
+		padding-block: 0 !important;
+		height: var(--tweaks-evtoh-tab-group-label-height) !important;
+		min-height: var(--tweaks-evtoh-tab-group-label-height) !important;
+		width: 100% !important;
+	}
 }
 
-/* When hovering over the sidebar */
+/* Collapsed state */
+#sidebar-main:not(:hover) {
+	width: var(--tweaks-evtoh-collapsed-width) !important;
+
+	/* Hide internal elements in collapsed state */
+	& .tab-label-container,
+	& .tab-close-button,
+	& .toolbarbutton-text {
+		display: block !important;
+		width: 0 !important;
+		opacity: 0 !important;
+		padding: 0 !important;
+	}
+
+	& .tab-group-label {
+		text-overflow: clip !important;
+		font-size: var(--tweaks-evtoh-tab-group-label-collapsed-font-size) !important;
+		line-height: var(--tab-group-label-height) !important;
+
+		&::first-letter {
+			font-size: var(--tweaks-evtoh-tab-group-label-collapsed-font-size-first-letter) !important;
+		}
+	}
+}
+
+/* Expanded state */
 #sidebar-main:hover {
-    width: 250px !important; /* Expanded width */
-    margin-right: -200px !important; /* Adjust for layout shift */
-    background: #000000 !important; /* Background color */
-    box-shadow: 2px 0 8px rgba(0, 0, 0, 0.4) !important; /* Optional shadow for depth */
+	/* Expanded state on hover or when forced with the expanded attribute */
+	width: var(--tweaks-evtoh-expanded-width) !important;
+
+	/* Don't shrink website when sidebar is expanded */
+	margin-inline-end: calc(var(--tweaks-evtoh-collapsed-width) - var(--tweaks-evtoh-expanded-width)) !important;
+
+	/* Show over tab contents */
+	z-index: calc(var(--browser-area-z-index-tabbox) + 1) !important;
+	background-color: var(--toolbox-bgcolor-inactive) !important;
+
+	/* Show titles and buttons when expanded */
+	& .tab-label-container,
+	& .tab-close-button,
+	& .toolbarbutton-text {
+		display: inline !important;
+	}
+
+	& #vertical-pinned-tabs-container .tab-icon-image {
+		margin-inline-end: var(--tab-icon-end-margin) !important;
+	}
+
+	.tab-label-container[textoverflow] {
+		mask-image: linear-gradient(to left, transparent, black var(--tab-label-mask-size)) !important;
+	}
 }
 
-/* Optional styling for smoother transitions */
-#sidebar-main:hover .tabbrowser-tab {
-    width: auto !important;
-    min-width: 100% !important;
-    max-width: 100% !important;
-}
 
-/* Column layout for pin tabs */
-#vertical-pinned-tabs-container {
-	grid-template-columns: none !important;
+/* Hide the splitter between the sidebar and the content area */
+#sidebar-launcher-splitter {
+	display: none !important;
 }
-
-/* Show pin tabs separator in expanded state */
-#tabbrowser-tabs[expanded] > #vertical-pinned-tabs-container-separator {
-  display: block !important;
-}
-
-/* Hide pin tabs separator in expanded state with no pin tabs */
-#vertical-pinned-tabs-container:empty + #vertical-pinned-tabs-container-separator {
-  display: none !important;
-}
-
-/* Hide close button in collapsed state */
-#tabbrowser-tabs[orient="vertical"]:not([expanded]) .tab-close-button {
-    display: none !important;
-}
-
-/* Uniform tabs padding */
-#tabbrowser-tabs[orient="vertical"] .tabbrowser-tab {
-	padding-block: 0px !important;
-}
-
 
 /* Hide Extensions in Sidebar */
 .actions-list[orientation="vertical"]:not(:hover) moz-button[type="icon ghost"]:not(:last-child) {opacity: 0 !important; height: 0px !important;}
