--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -7,6 +7,7 @@
 		background-attachment: fixed !important;
 		background-position-x: center !important;
 		background-position-y: bottom !important;
+		--newtab-search-icon: none !important;
 	}
 
 	/* Custom Logo */
@@ -14,15 +15,35 @@
 	.wordmark{ display: none !important; }
 	.logo-and-wordmark{ margin-block-end: 16px !important; }
 
+
 	/*Transparent and Blurred Search Bar */
-	.search-wrapper input{ background-color: transparent !important; backdrop-filter: blur(20px); }
-	.search-handoff-button{ background-color: transparent !important; backdrop-filter: blur(20px); border: none !important; }
-	.search-button{ display: none !important; }
+	.search-wrapper input{
+		background-color: transparent !important;
+		backdrop-filter: blur(20px);
+		padding-inline-start: 15px !important;
+	}
+	.search-handoff-button{
+		background-color: transparent !important;
+		backdrop-filter: blur(20px);
+		border: none !important;
+		padding-inline-start: 15px !important;
+		inset-inline-start: 15px !important;
+	}
+	.search-button{
+		display: none !important;
+		padding-inline-start: 15px !important;
+	}
+	.search-wrapper{
+		inset-inline-start: 15px !important;
+	}
+	.fake-caret{
+		inset-inline-start: 15px !important;
+	}
 }
-	
+
 @-moz-document url("about:home"), url("about:newtab") {
 	/* Position Items */
-	.only-search{ padding-top: 300px !important; }
+	.only-search{ padding-top: 350px !important; }
 }
 
 @-moz-document url("about:privatebrowsing") {
@@ -30,4 +51,3 @@
 	body{ padding-bottom: 200px !important; }
 	.info{ display: none !important; }
 }
-
