--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,2 +1,9 @@
+/* Reduce Vertical Tabs Padding */
+#tabbrowser-tabs[orient="vertical"] {
+    & .tabbrowser-tab:not([pinned]) {
+      padding-block: 0px 0px !important;
+    }
+}
+
 /* Hide Extensions in Sidebar */
 .actions-list[orientation="vertical"]:not(:hover) moz-button[type="icon ghost"]:not(:last-child) {opacity: 0 !important; height: 0px !important;}
