--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,25 +1,17 @@
-@-moz-document url("about:home"), url("about:newtab"), url("about:privatebrowsing") {
+@-moz-document url("about:home"), url("about:newtab") {
 	/* Custom Background*/
 	body{
-		background-image: url("BG.jpg") !important;
-		background-size: cover !important;
-		background-repeat: no-repeat !important;
-		background-attachment: fixed !important;
-		background-position-x: center !important;
-		background-position-y: bottom !important;
 		--newtab-search-icon: none !important;
 	}
 
 	/* Custom Logo */
-	.logo{ background: url("Logo.png") no-repeat center !important; background-size: 64px 64px !important; } 
-	.wordmark{ display: none !important; }
-	.logo-and-wordmark{ margin-block-end: 16px !important; }
+	.logo{ background: url("Logo.png") no-repeat center !important; background-size: 64px 64px !important; }
 
 
 	/*Transparent and Blurred Search Bar */
 	.search-wrapper input{
 		background-color: transparent !important;
-		backdrop-filter: blur(20px);
+		backdrop-filter: blur(10px);
 		padding-inline-start: 15px !important;
 	}
 	.search-handoff-button{
@@ -39,15 +31,10 @@
 	.fake-caret{
 		inset-inline-start: 15px !important;
 	}
+
 }
 
 @-moz-document url("about:home"), url("about:newtab") {
 	/* Position Items */
-	.only-search{ padding-top: 350px !important; }
-}
-
-@-moz-document url("about:privatebrowsing") {
-	/* Position Items and Hide Info*/
-	body{ padding-bottom: 200px !important; }
-	.info{ display: none !important; }
+	.only-search{ padding-top: 300px !important; }
 }
